--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/webpack-env": "1.16.2",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
+    "dataclass": "2.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react-hooks": "4.2.0",
@@ -42,6 +43,7 @@
     "prettier": "2.3.2",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
+    "react-custom-roulette": "1.1.8",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.0.9",
     "react-i18next": "11.11.1",
