--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/testing-library__jest-dom": "5.14.0",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
+    "apexcharts": "^3.28.3",
+    "axios": "0.24.0",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
     "d3": "7.1.1",
@@ -43,7 +45,6 @@
     "fontfaceobserver": "2.1.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "numeral": "^2.0.6",
     "husky": "7.0.0",
     "i18next": "20.3.2",
     "i18next-browser-languagedetector": "6.1.2",
@@ -53,15 +54,14 @@
     "jest-styled-components": "7.0.4",
     "lint-staged": "10.3.0",
     "node-plop": "0.26.2",
-    "apexcharts": "^3.28.3",
+    "numeral": "^2.0.6",
     "plop": "2.7.4",
     "prettier": "2.3.2",
     "react": "17.0.2",
-    "react-app-polyfill": "2.0.0",
     "react-apexcharts": "^1.3.9",
+    "react-app-polyfill": "2.0.0",
     "react-custom-roulette": "1.1.8",
     "react-dom": "17.0.2",
-    "react-apexcharts": "^1.3.9",
     "react-helmet-async": "1.0.9",
     "react-i18next": "11.11.1",
     "react-redux": "7.2.4",
@@ -74,6 +74,8 @@
     "sanitize.css": "12.0.1",
     "serve": "12.0.0",
     "shelljs": "0.8.4",
+    "simplebar": "^5.3.5",
+    "simplebar-react": "^2.3.5",
     "styled-components": "5.3.3",
     "stylelint": "13.13.1",
     "stylelint-config-recommended": "5.0.0",
@@ -82,8 +84,6 @@
     "ts-node": "10.0.0",
     "typescript": "4.2.2",
     "web-vitals": "2.1.0",
-    "simplebar": "^5.3.5",
-    "simplebar-react": "^2.3.5",
     "yup": "^0.32.9"
   },
   "scripts": {
